<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources>
<resources>
    <string name="app_name">nexec client demo</string>
    <string name="action_read_preset">Read a preset&#8230;</string>
    <string name="action_write_preset">Write a preset&#8230;</string>
    <string name="label_add">Add</string>
    <string name="label_command">Command</string>
    <string name="label_delete">Delete</string>
    <string name="label_host">Host</string>
    <string name="label_port">Port</string>
    <string name="label_positive">Okay</string>
    <string name="label_negative">Cancel</string>
    <string name="label_path_pattern">Path pattern</string>
    <string name="label_preset_name">Preset name</string>
    <string name="label_read">Read</string>
    <string name="label_run">Run</string>
    <string name="label_quit">Quit</string>
    <string name="label_stderr">Standard error</string>
    <string name="label_stdout">Standard output</string>
    <string name="label_key">Key</string>
    <string name="label_value">Value</string>
    <string name="value_default_host">neko-daisuki.ddo.jp</string>
    <string name="value_default_port">57005</string>
</resources>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
