<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE TableLayout>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/label_host"/>
        <EditText
            android:id="@+id/host_edit"
            android:typeface="monospace"
            android:inputType="text"
            android:text="@string/value_default_host"
            android:hint="@string/label_host"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/label_port"/>
        <EditText
            android:id="@+id/port_edit"
            android:typeface="monospace"
            android:inputType="number"
            android:text="@string/value_default_port"
            android:hint="@string/label_port"/>
    </TableRow>
</TableLayout>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
