<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE LinearLayout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_stdout"/>
    <EditText
        android:id="@+id/stdout_edit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="none"
        android:typeface="monospace"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_stderr"/>
    <EditText
        android:id="@+id/stderr_edit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="none"
        android:typeface="monospace"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/run_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_run"/>
        <Button
            android:id="@+id/quit_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_quit"/>
    </LinearLayout>
</LinearLayout>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
